--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "keywords": [],
   "author": "Pim Witlox",
   "license": "ISC",
+  "dependencies": {
+    "jsonfile": "^5.0.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.7",
     "istanbul": "^0.4.5",
-    "jsonfile": "^5.0.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1"
   }
